[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/loop_button.png" type="Texture" id=1]
[ext_resource path="res://Assets/pause_button.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Music Controls.gd" type="Script" id=3]
[ext_resource path="res://Scripts/VBoxContainer.gd" type="Script" id=4]
[ext_resource path="res://Scenes/music_player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Styles/Main Interface.tres" type="Theme" id=6]
[ext_resource path="res://Scenes/next_song_nexus.gd" type="Script" id=7]
[ext_resource path="res://Assets/hands.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Playlist.tscn" type="PackedScene" id=12]

[node name="Main Interface" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_left = 3.93405
margin_top = 1.94055
margin_right = 1026.93
margin_bottom = 592.941
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 1.0
margin_right = 178.0
margin_bottom = 17.0
text = "Files:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music Controls" type="Container" parent="Control"]
margin_left = 166.456
margin_top = 328.844
margin_right = 1019.45
margin_bottom = 598.844
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/Music Controls"]
anchor_bottom = 0.167
margin_right = 853.0
margin_bottom = 270.0
texture = ExtResource( 8 )

[node name="play_button" type="Button" parent="Control/Music Controls"]
anchor_right = 0.204
anchor_bottom = 0.046
margin_left = 402.0
margin_top = 168.0
margin_right = 39.0
margin_bottom = 20.0
icon = ExtResource( 2 )

[node name="loop_button" type="Button" parent="Control/Music Controls"]
anchor_right = 0.204
anchor_bottom = 0.046
margin_left = 470.0
margin_top = 168.0
margin_right = 12.0
margin_bottom = 20.0
icon = ExtResource( 1 )

[node name="current_song" type="Label" parent="Control/Music Controls"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.695
anchor_top = 1.0
anchor_right = 0.79
anchor_bottom = 1.0
margin_left = -170.715
margin_top = -174.0
margin_right = -146.715
margin_bottom = -293.928
size_flags_vertical = 1
text = "sex"
align = 1

[node name="ProgressBar" type="HSlider" parent="Control/Music Controls"]
anchor_right = 0.29
anchor_bottom = 0.088
margin_left = 73.0
margin_top = 113.0
margin_right = 604.0
margin_bottom = 129.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeControl" type="HSlider" parent="Control/Music Controls"]
anchor_left = 0.717
anchor_top = 0.563
anchor_right = 1.0
anchor_bottom = 0.771
margin_left = -69.0
margin_bottom = 16.0

[node name="next_song_nexus" type="Node" parent="Control/Music Controls"]
script = ExtResource( 7 )

[node name="File Path" type="Control" parent="Control"]
margin_top = 19.0
margin_right = 243.0
margin_bottom = 598.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Control/File Path"]
margin_left = -6.53602
margin_top = -5.35757
margin_right = 233.465
margin_bottom = 572.643
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Files" type="VBoxContainer" parent="Control/File Path/ScrollContainer"]
margin_right = 240.001
margin_bottom = 578.001
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Playlist" parent="Control" instance=ExtResource( 12 )]
margin_left = 260.054
margin_top = -1.50542
margin_right = 1028.05
margin_bottom = 309.496

[node name="music_player" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="Control/Music Controls/play_button" to="Control/Music Controls" method="_on_play_button_pressed"]
[connection signal="pressed" from="Control/Music Controls/loop_button" to="Control/Music Controls" method="_on_loop_button_pressed"]
[connection signal="mouse_entered" from="Control/Music Controls/ProgressBar" to="Control/Music Controls" method="_on_ProgressBar_mouse_entered"]
[connection signal="mouse_exited" from="Control/Music Controls/ProgressBar" to="Control/Music Controls" method="_on_ProgressBar_mouse_exited"]
[connection signal="value_changed" from="Control/Music Controls/ProgressBar" to="Control/Music Controls" method="_on_ProgressBar_value_changed"]
[connection signal="value_changed" from="Control/Music Controls/VolumeControl" to="Control/Music Controls" method="_on_VolumeControl_value_changed"]
